--- a/force-app/main/default/classes/HttpClient.cls
+++ b/force-app/main/default/classes/HttpClient.cls
@@ -1,40 +1,26 @@
 public with sharing class HttpClient {
 
-    public static HttpResponse get(String path) {
+    public static HttpResponse makeRequest(String path, String body, String method) {
         Http http = new Http();
         HttpRequest request = new HttpRequest();
-        request.setEndpoint('callout:ReqRes_API_Key' + path);
-        request.setMethod('GET');
-        request.setHeader('Content-Type', 'application/json');
-        return http.send(request);
-    }
+        List<String> httpMethods = new List<String>{'GET', 'POST', 'PUT', 'DELETE'};
 
-    public static HttpResponse post(String path, String body) {
-        Http http = new Http();
-        HttpRequest request = new HttpRequest();
         request.setEndpoint('callout:ReqRes_API_Key' + path);
-        request.setMethod('POST');
+        request.setMethod(method);
         request.setHeader('Content-Type', 'application/json');
-        request.setBody(body);
-        return http.send(request);
-    }
 
-    public static HttpResponse put(String path, String body) {
-        Http http = new Http();
-        HttpRequest request = new HttpRequest();
-        request.setEndpoint('callout:ReqRes_API_Key' + path);
-        request.setMethod('PUT');
-        request.setHeader('Content-Type', 'application/json');
-        request.setBody(body);
-        return http.send(request);
-    }
+        if (method == 'POST' || method == 'PUT') {
+            request.setBody(body);
+        }
 
-    public static HttpResponse delet(String path) {
-        Http http = new Http();
-        HttpRequest request = new HttpRequest();
-        request.setEndpoint('callout:ReqRes_API_Key' + path);
-        request.setMethod('DELETE');
-        request.setHeader('Content-Type', 'application/json');
+        if (!httpMethods.contains(method)) {
+            HttpResponse errorResponse = new HttpResponse();
+            errorResponse.setStatusCode(400);
+            errorResponse.setStatus('Bad Request');
+            errorResponse.setBody('Unsupported HTTP method: ' + method);
+            return errorResponse;
+        }
+
         return http.send(request);
     }
 }
